--- a/ci_template.yml
+++ b/ci_template.yml
@@ -21,11 +21,8 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - name: Change permissions
-        run: chmod 755 docs
-      - name: Auto-i18n_translate
+      - name: Translate
         env:
-          # 设置环境变量
           CHATGPT_API_KEY: ${{ secrets.CHATGPT_API_KEY }}
           CHATGPT_API_BASE: ${{ secrets.CHATGPT_API_BASE }}
         run: |
@@ -41,7 +38,3 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install MkDocs dependencies
-        run: pip install -r requirements.txt
-      - name: Deploy with MkDocs
-        run: mkdocs gh-deploy --force
